--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.13.0",
     "@angular/cli": "~7.3.1",
-    "@angular/compiler-cli": "^7.2.5",
+    "@angular/compiler-cli": "^8.1.1",
     "@angular/language-service": "^7.2.5",
     "@types/es6-collections": "^0.5.31",
     "@types/jasmine": "~2.8.6",
@@ -40,7 +40,7 @@
     "electron": "^4.0.5",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "^4.0.0",
+    "karma": "^4.2.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.0",
     "karma-jasmine": "~1.1.1",
@@ -48,6 +48,6 @@
     "protractor": "~5.4.0",
     "ts-node": "~5.0.1",
     "tslint": "~5.9.1",
-    "typescript": "~3.2.4"
+    "typescript": "^3.4.5"
   }
 }
